@@ -76,11 +76,6 @@
  */
 int main(int argc, char* argv[])
 {
-    // MS Visual C++ memory leak debug tracing
-#if defined(_MSC_VER) && defined(_DEBUG)
-    _CrtSetDbgFlag(_CrtSetDbgFlag(_CRTDBG_REPORT_FLAG) | _CRTDBG_LEAK_CHECK_DF);
-#endif
-
     CppCheckExecutor exec;
 
 // *INDENT-OFF*
