@@ -25,9 +25,6 @@ premium-cert-str34-c
 # we intentionally pass structs
 premium-cert-dcl39-c-*
 
-# we need to declare reserved identifier _CRTDBG_MAP_ALLOC
-premium-cert-dcl51-cpp
-
 # we don't want to check the return values of fclose/sprintf/etc
 premium-cert-err33-c
 
