@@ -40,10 +40,6 @@ CheckOptions:
     if(WITH_QCHART)
         target_link_libraries(cppcheck-gui ${QT_CHARTS_LIB})
     endif()
-    if(MSVC)
-        # compilation will fail as e.g. QList::realloc would be replaced by MSVC's macro definition
-        target_compile_definitions(cppcheck-gui PRIVATE $<$<CONFIG:Debug>:DISABLE_CRTDBG_MAP_ALLOC>)
-    endif()
     if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
         if(QT_VERSION VERSION_LESS "6.4.0")
             # caused by Qt generated moc code - see https://bugreports.qt.io/browse/QTBUG-100915
